--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-index-with-two/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-index-with-two/view.html
@@ -66,6 +66,10 @@ Benutzer
 <a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
 </a>
 </div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+</a>
+</div>
 <div class='nav-item active'>
 <a class="nav-link active" aria-current="page" href="/2024/mv-cup/score/lists">Startlisten
 </a>
@@ -121,205 +125,50 @@ Erweitert
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Lauf 1</h4>
+<h4 class='m-0 py-2 ps-3'>Startlisten</h4>
+<a class="card-primary-action" href="/2024/mv-cup/score/list_factories/new">Hinzufügen
+<i class='far fa-square-plus'></i>
+</a>
 </div>
 </div>
-<table class='table much-data'>
-<thead>
-<tr class='small'>
-<th>
-<span class='thead-run'>Lauf</span>
-</th>
-<th>
-<span class='thead-track'>Bahn</span>
-</th>
-<th>Mannschaft</th>
-<th>Ziele</th>
-<th>Zeit</th>
-</tr>
-</thead>
-
-<tbody>
-<tr class='' data-id='UUID'>
-<td class='run'>
-<a name='jump-run-2'></a>
-1
+<table class='table'>
+<tr>
+<td style='width: 3rem'>
+<i class='far fa-eye-slash' title='Nicht öffentlich'></i>
 </td>
-<th class='track'>1</th>
 <td>
-Männer-Team 3
-<br>
-<div class='tiny'>Löschangriff Nass - Männer</div>
-</td>
-<td class='separate-times'>
-
-<br>
-
-</td>
-<td class='time-col'>
-
+<img src="/assets/disciplines/hl.svg" width="20" height="20" />
+Hakenleitersteigen - Frauen - Lauf 1
 </td>
 <td class='text-end'>
-<a title="Zeiten bearbeiten" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/runs/1/edit"><i class="far fa-edit"></i></a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
 </td>
-
 </tr>
-<tr class='next-run' data-id='UUID'>
-<td class='run'>
+<tr>
+<td style='width: 3rem'>
+<i class='far fa-eye' title='Öffentlich'></i>
 </td>
-<th class='track'>2</th>
 <td>
-Männer-Team 2
-<br>
-<div class='tiny'>Löschangriff Nass - Männer</div>
-</td>
-<td class='separate-times'>
-
-<br>
-
-</td>
-<td class='time-col'>
-
+<img src="/assets/disciplines/la.svg" width="20" height="20" />
+Löschangriff Nass - Frauen - Lauf 1
 </td>
 <td class='text-end'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
 </td>
-
 </tr>
-<tr class='' data-id='UUID'>
-<td class='run'>
-<a name='jump-run-3'></a>
-2
-</td>
-<th class='track'>1</th>
-<td>
-Frauen-Team
-<br>
-<div class='tiny'>Löschangriff Nass - Frauen</div>
-</td>
-<td class='separate-times'>
-
-<br>
-
-</td>
-<td class='time-col'>
-
-</td>
-<td class='text-end'>
-<a title="Zeiten bearbeiten" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/runs/2/edit"><i class="far fa-edit"></i></a>
-</td>
-
-</tr>
-<tr class='next-run'>
-<td class='run'>
-</td>
-<th class='track'>2</th>
-<td>
-
-<br>
-<div class='tiny'></div>
-</td>
-<td class='separate-times'>
-
-<br>
-
-</td>
-<td class='time-col'>
-
-</td>
-<td class='text-end'>
-</td>
-
-</tr>
-</tbody>
 </table>
 
+
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">als PDF
-</a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.xlsx">als XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists.todo">Mehrere zusammen drucken
 </a>
 </div>
 </div>
 </div>
-</div>
-</div>
-</div>
-<div class='col-md-3'>
-<div class='card mb-3 text-bg-warning'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Versteckt</h4>
-</div>
-</div>
-<div class='card-body'>
-<p>Die Startliste ist derzeit noch versteckt. Bitte geben Sie diese nach der Kontrolle frei.</p>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit">Bearbeiten</a>
-
-</div>
-</div>
-<div class='card mb-3'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/score/lists">Übersicht
-<i class='far fa-list'></i>
-</a>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/move">Reihenfolge bearbeiten</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_times">Zeiten im Block eintragen</a>
-<a class=" btn btn-light btn-sm" data-remote="true" href="/2024/mv-cup/score/lists/UUID/select_entity">Teilnehmer hinzufügen</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID?destroy_index=1">Teilnehmer entfernen</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories/copy_list/UUID">Startliste klonen</a>
-</div>
-
-</div>
-<div class='card-footer'>
-<div class='d-flex justify-content-between align-items-start'>
-<div></div>
-<div>
-<div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">PDF
-</a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf?more_columns=true">PDF für Kampfrichter
-</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class='card mb-3'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Allgemein</h4>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit">Bearbeiten</a>
-<a data-confirm="Startliste wirklich löschen? Alle bisher eingetragenen Zeiten dieser Liste gehen verloren!" class=" btn btn-light btn-sm" rel="nofollow" data-method="delete" href="/2024/mv-cup/score/lists/UUID">Löschen</a>
-</div>
-
-</div>
-</div>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Ergebnisse</h4>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Männer</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Frauen</a>
-</div>
-
 </div>
 </div>
 </div>
