--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change/view.html
@@ -66,6 +66,10 @@ Benutzer
 <a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
 </a>
 </div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+</a>
+</div>
 <div class='nav-item active'>
 <a class="nav-link active" aria-current="page" href="/2024/mv-cup/score/lists">Startlisten
 </a>
