--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new/view.html
@@ -66,6 +66,10 @@ Benutzer
 <a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
 </a>
 </div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+</a>
+</div>
 <div class='nav-item active'>
 <a class="nav-link active" aria-current="page" href="/2024/mv-cup/score/lists">Startlisten
 </a>
@@ -133,6 +137,18 @@ Erweitert
 <div class='col-md-7'>
 <div class='d-grid gap-2'>
 <button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Löschangriff Nass</button>
+</div>
+</div>
+</div>
+</form><form class="simple_form new_score_list_factory" id="new_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden score_list_factory_discipline_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="score_list_factory[discipline_id]" id="score_list_factory_discipline_id" /></div>
+<div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div class='card-body row'>
+<div class='col-md-5'>
+<img src="/assets/disciplines/hl.svg" width="40" height="40" />
+</div>
+<div class='col-md-7'>
+<div class='d-grid gap-2'>
+<button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Hakenleitersteigen</button>
 </div>
 </div>
 </div>
