--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-person/view.html
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Startliste hinzufügen</p>
+<p class='lead m-0 ms-1'>Startliste aktualisieren</p>
 
 </div>
 </header>
@@ -121,92 +121,34 @@ Erweitert
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row'>
-<div class='col-md-6'>
-<div class='card'>
+<div class='col-md-8'>
+<form class="simple_form edit_score_list" id="edit_score_list_UUID" novalidate="novalidate" action="/2024/mv-cup/score/lists/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Startliste erstellen - Schritt 7</h4>
+<h4 class='m-0 py-2 ps-3'>Startliste aktualisieren</h4>
 </div>
 </div>
 <div class='card-body'>
-<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="finish" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
-<div class="form-group my-2 select optional score_list_factory_before_result"><label class="control-label select optional" for="score_list_factory_before_result_id">Ergebnisliste</label><select class="form-select select optional" name="score_list_factory[before_result_id]" id="score_list_factory_before_result_id"><option selected="selected" value="UUID">Löschangriff Nass - Frauen</option>
-<option value="UUID">Löschangriff Nass - Männer</option></select></div>
-<div class="form-group my-2 integer optional score_list_factory_best_count"><label class="control-label integer optional" for="score_list_factory_best_count">Anzahl der Finalisten auf der neuen Liste (X)</label><input class="form-control numeric integer optional" value="30" type="number" step="1" name="score_list_factory[best_count]" id="score_list_factory_best_count" /></div>
-<table class='table table-condensed'>
-<tr>
-<th class=''>die x Besten (Finale)</th>
-<td class=''>Man wählt man eine Ergebnisliste aus, von der die X Besten auf der neuen Liste erscheinen.</td>
-</tr>
+<div class="form-group my-2 string required score_list_name form-group-valid"><label class="control-label string required" for="score_list_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Hakenleitersteigen - Frauen - Lauf 1" name="score_list[name]" id="score_list_name" /></div>
+<div class="form-group my-2 string required score_list_shortcut form-group-valid"><label class="control-label string required" for="score_list_shortcut">Abkürzung <abbr title="required">*</abbr></label><input class="form-control string required" maxlength="8" size="8" type="text" value="Lauf 1" name="score_list[shortcut]" id="score_list_shortcut" /></div>
+<div class="form-group date optional score_list_date"><label class="date optional" for="score_list_date">Datum</label><div class="d-flex flex-row justify-content-between align-items-center"><input class="form-control mx-1 date optional" type="date" name="score_list[date]" id="score_list_date" /></div></div>
+<fieldset class="form-group boolean optional score_list_show_multiple_assessments form-group-valid"><div class="form-check"><input name="score_list[show_multiple_assessments]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" checked="checked" name="score_list[show_multiple_assessments]" id="score_list_show_multiple_assessments" /><label class="form-check-label boolean optional" for="score_list_show_multiple_assessments">Zeige Wertungen unter Mannschaft an</label></div></fieldset>
+<fieldset class="form-group boolean optional score_list_hidden form-group-valid"><div class="form-check"><input name="score_list[hidden]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" checked="checked" name="score_list[hidden]" id="score_list_hidden" /><label class="form-check-label boolean optional" for="score_list_hidden">Verstecken</label></div></fieldset>
+<fieldset class="form-group boolean optional score_list_show_best_of_run"><div class="form-check"><input name="score_list[show_best_of_run]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list[show_best_of_run]" id="score_list_show_best_of_run" /><label class="form-check-label boolean optional" for="score_list_show_best_of_run">Beste des Laufs anzeigen</label></div></fieldset>
+<fieldset class="form-group check_boxes optional score_list_results form-group-valid"><div class="col-form-label pt-0">Ergebnislisten</div><input type="hidden" name="score_list[result_ids][]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input check_boxes optional" type="checkbox" value="UUID" checked="checked" name="score_list[result_ids][]" id="score_list_result_ids_UUID" /><label class="form-check-label collection_check_boxes" for="score_list_result_ids_UUID">Hakenleitersteigen - Frauen</label></div><div class="form-check"><input class="form-check-input check_boxes optional" type="checkbox" value="UUID" name="score_list[result_ids][]" id="score_list_result_ids_UUID" /><label class="form-check-label collection_check_boxes" for="score_list_result_ids_UUID">Löschangriff Nass - Frauen</label></div></fieldset>
 
-</table>
-<button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Weiter</button>
-
-</form>
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="generator" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
-<input type="submit" name="commit" value="Zurück" class="btn btn-light btn-sm" data-disable-with="Zurück" />
-<a data-turbo-method="delete" data-turbo-confirm="Listenerstellung abbrechen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories">Abbrechen</a>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Startliste aktualisieren</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/score/results">Abbrechen</a>
+</div>
+</div>
+</div>
+</div>
 </form></div>
-</div>
-</div>
-</div>
-</div>
-<div class='col-md-6'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Bisher ausgewählt</h4>
-</div>
-</div>
-<table class='table'>
-<tr>
-<th>Disziplin</th>
-<td>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass
-</td>
-</tr>
-<tr>
-<th>Wertungen</th>
-<td>
-<ul>
-<li><a href="/2024/mv-cup/assessments/UUID">Löschangriff Nass - Männer</a></li>
-<li><a href="/2024/mv-cup/assessments/UUID">Löschangriff Nass - Frauen</a></li>
-</ul>
-</td>
-</tr>
-<tr>
-<th>Name</th>
-<td>Löschangriff Nass - Lauf 1</td>
-</tr>
-<tr>
-<th>Abkürzung</th>
-<td>Lauf 1</td>
-</tr>
-<tr>
-<th>Wettkampfbahnen</th>
-<td>2</td>
-</tr>
-<tr>
-<th>Ergebnislisten</th>
-<td>
-<ul>
-<li><a href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Männer</a></li>
-<li><a href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Frauen</a></li>
-</ul>
-</td>
-</tr>
-<tr>
-<th class=''>die x Besten (Finale)</th>
-<td class=''>Man wählt man eine Ergebnisliste aus, von der die X Besten auf der neuen Liste erscheinen.</td>
-</tr>
+<div class='col-md-4'>
 
-</table>
-
-</div>
 </div>
 </div>
 </div>
