--- a/app/views/competitions/certificates/templates/edit_text_fields.html.haml
+++ b/app/views/competitions/certificates/templates/edit_text_fields.html.haml
@@ -38,7 +38,7 @@
           = tf.input :height, as: :hidden
           = tf.input :size, as: :hidden
           = tf.input :key, as: :hidden, input_html: { value: 'template' }
-          = tf.input :align, as: :hidden, input_html: { value: "center" }
+          = tf.input :align, as: :hidden, input_html: { value: 'center' }
           = tf.input :text, as: :hidden
           = tf.input :font, as: :hidden
           = tf.input :color, as: :hidden
