--- a/app/views/competitions/people/_index_table.html.haml
+++ b/app/views/competitions/people/_index_table.html.haml
@@ -29,7 +29,7 @@
         - assessments.each do |assessment|
           - request = person.request_for(assessment)
           - if request.present?
-            %td{ title: "#{assessment}: #{request.type}" }= request.short_type
+            %td{ title: "#{assessment}: #{request.type}" }= person_short_type(request)
           - else
             %td
         %td.text-end
