--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -61,7 +61,7 @@
           = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
 
   - if can?(:edit, @competition) || @team.people.exists?
-    .col-md-12
+    .col-md-12#people-table
       = card(Team.human_attribute_name(:people)) do |card|
         - card.primary_actions do |actions|
           - actions.link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team), end_icon: :square_plus
