--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
@@ -203,7 +203,7 @@ Mannschaftswertung
 </div>
 </div>
 </div>
-<div class='col-md-12'>
+<div class='col-md-12' id='people-table'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
