--- a/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
+++ b/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
@@ -213,7 +213,7 @@ Außer der Wertung
 </div>
 </div>
 </div>
-<div class='col-md-12'>
+<div class='col-md-12' id='people-table'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
