--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-edit-error/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-edit-error/view.html
@@ -127,8 +127,8 @@ Erweitert
 </div>
 <div class='card-body'>
 <div class="form-group my-2 select required assessment_discipline form-group-invalid"><label class="control-label select required" for="assessment_discipline_id">Disziplin <abbr title="required">*</abbr></label><select class="form-select is-invalid select required" aria-invalid="true" name="assessment[discipline_id]" id="assessment_discipline_id"><option value="" label=" "></option>
-<option value="UUID">Löschangriff Nass</option>
-<option value="UUID">Gruppenstafette</option></select><div class="invalid-feedback">Disziplin muss ausgefüllt werden</div></div>
+<option value="UUID">Gruppenstafette</option>
+<option value="UUID">Löschangriff Nass</option></select><div class="invalid-feedback">Disziplin muss ausgefüllt werden</div></div>
 <div class="form-group my-2 select required assessment_band form-group-valid"><label class="control-label select required" for="assessment_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required" name="assessment[band_id]" id="assessment_band_id"><option value="" label=" "></option>
 <option selected="selected" value="UUID">Frauen</option>
 <option value="UUID">Männer</option></select></div>
