--- a/app/views/competitions/people/index.html.haml
+++ b/app/views/competitions/people/index.html.haml
@@ -4,7 +4,7 @@
   = card(band.name, class: 'mb-3') do |card|
     - card.body do
       - if resource_collection.exists?(band:)
-        = render('index_table', resource_class:, resource_collection: resource_collection.where(band:), band:)
+        = render('index_table', resource_class:, resource_collection: resource_collection.where(band:).sort, band:)
       - else
         .alert.alert-info= t('a.no_entries_found')
 
