--- a/app/views/competitions/score/competition_results/index.html.haml
+++ b/app/views/competitions/score/competition_results/index.html.haml
@@ -3,18 +3,27 @@
 .row
   .col-md-8
     - @competition.score_competition_results.sort.each do |result|
-      = card(result.name, class: 'mb-3') do |card|
-        - card.body do
-          = render('index_table', resource_class:, competition_result: result)
-        - if can?(:create, resource_class.new(competition: @competition))
-          = card.primary_actions do |actions|
+      - if can?(:create, resource_class.new(competition: @competition))
+        - name = capture do
+          - if result.hidden?
+            %i.far.fa-eye-slash{ title: 'Nicht öffentlich' }
+          - else
+            %i.far.fa-eye{ title: 'Öffentlich' }
+          = result.name
+        = card(name, class: 'mb-3') do |card|
+          - card.direct do
+            = render('index_table', resource_class:, competition_result: result)
+          - card.primary_actions do |actions|
             - actions.link_to t('a.edit'), { action: :edit, id: result.id }, end_icon: :edit
 
-          = card.actions do |actions|
+          - card.actions do |actions|
             - actions.link_to 'Urkunden', { action: :edit, id: result.id }, end_icon: :file_certificate
+      - elsif result.hidden?
+        = card_body(result.name) do
+          Diese Gesamtwertung ist nicht öffentlich.
   .col-md-4
     = card(t('a.actions'), class: 'mb-3') do |card|
       - card.primary_actions do |actions|
         - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
       - card.body do
-        %p Gesamtwertungen sind toll.
+        %p Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.
