--- a/app/views/competitions/_header.html.haml
+++ b/app/views/competitions/_header.html.haml
@@ -18,7 +18,7 @@
     - if @competition.score_competition_results.exists?(hidden: false)
       = tabs.link_to Score::CompetitionResult, competition_score_competition_results_path
     - if Score::ResultSeriesAssessment.exists_for?(@competition)
-      = tabs.link_to Series::Round, competition_series_rounds_path
+      = tabs.link_to Series::Round, competition_series_rounds_path, active: resource_class == Series::Round
     - if can?(:manage, @competition)
       = tabs.dropdown 'Erweitert' do |dropdown|
         = dropdown.link_to Discipline, competition_disciplines_path
