--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-assessment/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-assessment/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>MV-Cup - Feuerwehrsport</title>
+<title>Serien - MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Gesamtwertungen</p>
+<p class='lead m-0 ms-1'>Serien</p>
 
 </div>
 </header>
@@ -67,11 +67,19 @@ Benutzer
 </a>
 </div>
 <div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+</a>
+</div>
+<div class='nav-item'>
 <a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
 </a>
 </div>
 <div class='nav-item'>
 <a class="nav-link" href="/2024/mv-cup/score/results">Ergebnisse
+</a>
+</div>
+<div class='nav-item active'>
+<a class="nav-link active" aria-current="page" href="/2024/mv-cup/series/rounds">Serien
 </a>
 </div>
 <div class='dropdown nav-item'>
@@ -91,8 +99,8 @@ Erweitert
 <a class="dropdown-item" href="/2024/mv-cup/assessments">Wertungen
 </a>
 </div>
-<div class='active'>
-<a class="dropdown-item active" aria-current="page" href="/2024/mv-cup/score/competition_results">Gesamtwertungen
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/score/competition_results">Gesamtwertungen
 </a>
 </div>
 <div class=''>
@@ -113,80 +121,75 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row'>
-<div class='col-md-8'>
-<div class='card mb-3'>
+<div class='row g-4 mb-4'>
+<div class='col-md-6'><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'><i class='far fa-eye-slash' title='Nicht öffentlich'></i>
-Frauen
-</h4>
-<a class="card-primary-action" href="/2024/mv-cup/score/competition_results/UUID/edit">Bearbeiten
-<i class='far fa-edit'></i>
-</a>
+<h4 class='m-0 py-2 ps-3'>D-Cup</h4>
 </div>
 </div>
-<table class='table table-bordered'>
+<table class='table'>
+<thead>
 <tr>
-<th>Platz</th>
-<th>Mannschaft</th>
-<th colspan='2'>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-LA
-</th>
-<th class='small sum-points'>Punkte</th>
+<th>Ort</th>
+<th>Datum</th>
 </tr>
+</thead>
+<tbody>
 <tr>
-<td class='sum-points'>1.</td>
-<td>Frauen-T 1</td>
-<td class='small time'></td>
-<td class='small points'>1</td>
-<td class='sum-points'>1</td>
+<td>Rostock</td>
+<td>29.02.2024</td>
 </tr>
-<tr>
-<td class='sum-points'>2.</td>
-<td>Frauen-T 2</td>
-<td class='small time'></td>
-<td class='small points'>2</td>
-<td class='sum-points'>2</td>
-</tr>
+</tbody>
 </table>
 
-
-<div class='card-footer'>
-<div class='d-flex justify-content-between align-items-start'>
-<div></div>
-<div>
-<div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
-<i class='far fa-file-certificate'></i>
-</a>
 </div>
 </div>
 </div>
-</div>
-</div>
-</div>
-<div class='col-md-4'>
-<div class='card mb-3'>
+<div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/score/competition_results/new">Hinzufügen
-<i class='far fa-square-plus'></i>
-</a>
+<h4 class='m-0 py-2 ps-3'>Hakenleitersteigen - Männlich</h4>
 </div>
 </div>
-<div class='card-body'>
-<p>Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.</p>
+<table class='table table-hover table-bordered table-sm'>
+<thead>
+<th>Platz</th>
+<th>Name</th>
+<th>Vorname</th>
+<th>Rostock</th>
+<th>Bestzeit</th>
+<th>Summe</th>
+<th>Teil.</th>
+<th>Punkte</th>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Meier1</td>
+<td>Alfred1</td>
+<td>8,00 (30)</td>
+<td>8,00</td>
+<td>8,00</td>
+<td>1</td>
+<td>30</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Meier2</td>
+<td>Alfred2</td>
+<td>9,00 (29)</td>
+<td>9,00</td>
+<td>9,00</td>
+<td>1</td>
+<td>29</td>
+</tr>
+</tbody>
+</table>
 
-</div>
-</div>
-</div>
 </div>
 </div>
 </body>
